tests/negative/scope/class-defined-twice/test.smol
package testing;

class Test {}
class Alpha {}
class Alpha {}
